--- a/src/app/app.html
+++ b/src/app/app.html
@@ -7,11 +7,11 @@
   </ion-header>
 
   <ion-content>
-    <ion-list>
+    <!--<ion-list>
       <button ion-item *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
-    </ion-list>
+    </ion-list>-->
   </ion-content>
 
 </ion-menu>
